fixed horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 nav {
   height: 100%;
   width: 100%;
+  background-color: red;
   display: flex;
   align-items: center;
   justify-content: space-between;
